<resources>
    <string name="app_name">TeamMeetingSchedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username1">username</string>
    <string name="password">password</string>
    <string name="btnLogin">Login</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="otp">Enter OTP</string>
    <string name="forgot_password_click_here">Forgot Password..?Click Here</string>
    <string name="sign_up">Sign Up</string>

    <string-array name="area">
        <item>Pune</item>
        <item>Pimpri</item>
    </string-array>
</resources>
