<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/loginperson"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_margin="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/logo"
                android:padding="10dp"
                android:contentDescription="" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/floating_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="50dp"
                    android:hint="@string/username1"
                    android:inputType="textEmailAddress"
                    android:maxLength="32"
                    android:padding="10dp"
                    android:textColorLink="@color/colorPrimary" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/floating_login_Paassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:padding="10dp"
                    android:textColorLink="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/login_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?attr/colorPrimary"
                android:onClick="login"
                android:padding="10dp"
                android:text="@string/btnLogin"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?attr/colorPrimary"
                android:onClick="register"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/forgot_password_click_here"
                android:textSize="16dip"
                tools:ignore="SpUsage" />
            
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</RelativeLayout>
